[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
name = "libtyr"
version = "0.1.0"

[dependencies]
derive_builder = { git = "https://github.com/colin-kiegel/rust-derive-builder" }
error-chain = "0.11.0-rc.2"
getset = "0.0.5"
lazy_static = "0.2.8"
mimir = { git = "https://github.com/aesir-vanir/mimir" }
term = "0.4.6"
