[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
description = "Code generation for Oracle ORM and query builder code in Rust"
documentation = "https://docs.rs/libtyr"
keywords = ["orm", "oracle", "query"]
license = "MIT/Apache-2.0"
name = "libtyr"
readme = "README.md"
repository = "https://github.com/aesir-vanir/libtyr"
version = "0.1.0"

[dependencies]
derive_builder = "0.5.0"
Inflector = "0.10.1"
error-chain = "0.11.0-rc.2"
getset = "0.0.5"
lazy_static = "0.2.8"
mimir = "0.2.0"
mustache = "0.8.1"
rustc-serialize = "0.3.24"
serde = "1.0.11"
serde_derive = "1.0.11"
term = "0.4.6"

[patch.crates-io]
mimir = { path = "../mimir" }
derive_builder = { path = "../rust-derive-builder/derive_builder" }
